# tbs-options-trading-system

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  security.yml
config/: default.yaml
docs/: ARCHITECTURE.md  STRATEGY_GUIDE.md
src/: __init__.py  core.py
src/analytics/: __init__.py  options.py  volatility.py
src/bots/: engine.py  registry.py
src/risk/: exposure.py  manager.py
src/strategies/: base.py  spreads.py  theta_harvest.py
tests/: test_analytics.py  test_engine.py  test_registry.py  test_risk.py
