[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tbs-options-trading-system"
version = "1.0.0"
description = "TBS #1-#100 Institutional-Grade Options Trading Bot System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Richard Patterson"}]
keywords = ["options", "trading", "algorithmic", "quantitative", "finance"]
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "loguru>=0.7"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py311"
